[ADD] Base64 endocing into RSA

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,5 @@ project(oculta)
 
 add_executable(function_tests functions_test.cpp functions.cpp testing.cpp)
 add_executable(aes_tests aes_test.cpp functions.cpp testing.cpp SymmetricEncryption.cpp SimpleAes.cpp)
-add_executable(rsa_tests rsa_test.cpp functions.cpp testing.cpp AsymmetricEncryption.cpp Rsa.cpp)
+add_executable(rsa_tests rsa_test.cpp functions.cpp testing.cpp AsymmetricEncryption.cpp Rsa.cpp Base64Encoder.cpp)
+add_executable(base64_tests base64_test.cpp functions.cpp testing.cpp Base64Encoder.cpp)
